# OpenCVFace

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rocky/opencvface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/rocky/opencvface/: OpenCVEngineInterface.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/rocky/opencvface/: FaceDetection.kt  FaceDetectionJava.kt  MainActivityJava.kt
app/src/main/java/org/opencv/android/: AsyncServiceHelper.java  CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/rocky/opencvface/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
